@@ -104,6 +104,7 @@ class LuaSyncedCtrl
 		static int SetUnitShieldRechargeDelay(lua_State* L);
 		static int SetUnitFlanking(lua_State* L);
 		static int SetUnitPhysicalStateBit(lua_State* L);
+		static int GetUnitPhysicalState(lua_State* L);
 		static int SetUnitTravel(lua_State* L);
 		static int SetUnitFuel(lua_State* L);
 		static int SetUnitMoveGoal(lua_State* L);
